--- a/codellama-7b-grpo.yaml
+++ b/codellama-7b-grpo.yaml
@@ -14,9 +14,9 @@ dataset_id_or_path: google-research-datasets/mbpp
 # No LoRA is used here
 
 # Training arguments
-max_steps: 1875 # 1 epoch for 45k countdown tasks
+max_steps: 125
 per_device_train_batch_size: 1
-gradient_accumulation_steps: 8
+gradient_accumulation_steps: 2
 gradient_checkpointing: true
 gradient_checkpointing_kwargs:
   use_reentrant: false
@@ -34,7 +34,7 @@ vllm_gpu_memory_utilization: 0.5
 
 # Logging arguments
 logging_strategy: steps
-logging_steps: 2
+logging_steps: 1
 report_to:
 - tensorboard
 save_strategy: "steps"
